--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "chai": "^4.1.2",
+    "fibers": "^5.0.0",
+    "node-sass": "^6.0.1",
+    "sass": "^1.37.5",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^3.2.1",
     "typescript": "~4.1.5"
   }
 }
